--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -19,14 +19,14 @@
     overflow-x: hidden;
 }
 
-button.mv1 {
+/* button.mv1 {
     position: absolute;
     background: none;
     color: #35e5fd;
     font-size: 18px;
     border: 2px solid #35e5fd;
     margin-top: -160px; 
-    margin-left: -160px;
+    margin-left: -180px;
     border-radius: 40px;
     height: 50px;
     width: 150px;
@@ -35,7 +35,7 @@ button.mv1 {
     -ms-border-radius: 40px;
     -o-border-radius: 40px;
     cursor: pointer;
-} 
+}  */
 
 button.mv2 {
    position: absolute;
@@ -43,8 +43,8 @@ button.mv2 {
    color: #35e5fd;
    font-size: 18px;
    border: 2px solid #35e5fd;
-   margin-top: -340px; 
-   margin-left: 20px;
+   margin-top: -21%; 
+   margin-left: -75px;
    border-radius: 40px;
    height: 50px;
    width: 150px;
@@ -53,11 +53,19 @@ button.mv2 {
    -ms-border-radius: 40px;
    -o-border-radius: 40px;
    cursor: pointer;
+  color: #fff;
+  background-image: linear-gradient(45deg, #35e5fd 50%, transparent 50%);
+  background-position: 100%;
+  background-size: 400%;
+  transition: background 300ms ease-in-out;
+}
+.mv2:hover {
+  background-position: 0;
 } 
 .p-1 {
     width: 150px;
-    /* margin-top: 50px; */
-    margin-left: -390px;
+    margin-bottom: 150%;
+    margin-left: -116%;
     animation: rotate 50s linear infinite;
 }
 @keyframes rotate{
@@ -79,11 +87,15 @@ button.mv2 {
     word-spacing: 5px;
     /* animation: blink 2s linear infinite; */
      position: absolute;
-    margin-bottom: 20%;
+    margin-bottom: 32%;
     background-color: transparent;
+}
+.dates{
+    font-size: 35px;
 }
 .landing__Heading{
     /* height:15em; */
+    margin-bottom:-10%;
     font-family: "Righteous", cursive;
     background: url("https://media.giphy.com/media/FE0WTM8BG754I/giphy.gif") center center no-repeat;
     -webkit-background-clip: text;
@@ -91,7 +103,7 @@ button.mv2 {
     font-size: 10rem;
     letter-spacing: 10px;
     background-size: cover;
-    margin: 0px;
+    /* margin: 0px; */
     color: transparent;
 }
 
@@ -116,6 +128,7 @@ button.mv2 {
     right: 50px;
     animation: float 6s ease-in-out infinite;
 }
+
 
 @media(min-width:800px){
     .m{
@@ -192,11 +205,17 @@ button.mv2 {
 @media (min-width: 700px) {
     .p-3{
     margin-top: 89%;
-    margin-left: -120%;
+    margin-left: -112%;
         
     }
     
 
+}
+@media (min-width: 1080px) {
+.jscop{
+    margin-bottom: 25%;
+
+}
 }
 
 
@@ -205,16 +224,36 @@ button.mv2 {
     #home{
         height:75vh;
     }
-    .jscop{
-        /* margin-bottom: 65%; */
-
-    }
+    
     .landing__Heading{
-        font-size: 7rem;
+        font-size: 6rem;
     }
    
 
 }
+#pulse:hover,
+#pulse:focus {
+  -webkit-animation: pulse 1s;
+          animation: pulse 1s;
+  box-shadow: 0 0 0 2em transparent;
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    box-shadow: 0 0 0 0 var(--hover);
+  }
+}
+
+
+@keyframes pulse {
+  0% {
+    box-shadow: 0 0 0 0 var(--hover);
+  }
+}
+#pulse {
+    --color: #ef6eae;
+    --hover: #ef8f6e;
+  }
 @media (max-width: 768px) {
     
     #home{
@@ -228,6 +267,10 @@ button.mv2 {
         font-size: 6rem;
         line-height: 90px;
     }
+    .dates{
+        margin-top: 12%;
+    }
+    
    
 
 }
@@ -242,7 +285,7 @@ button.mv2 {
         margin-top:50px;
     }
     .p-3{
-        margin-top:110%;
+        margin-top:-30%;
     }
     #home{
         height:110vh;
@@ -251,8 +294,11 @@ button.mv2 {
         margin-top:176px;
     }
     .jscop{
-        margin-bottom:26%;
+        margin-bottom:47%;
         max-height:50vh
+    }
+    .dates{
+        margin-top: 12%;
     }
 
 }
