--- a/src/Components/Team/Team.css
+++ b/src/Components/Team/Team.css
@@ -41,37 +41,14 @@
 
 .Team img {
   width: 100%;
-  height: auto;
-  border-radius: 50%;
+  height: 199px;
+  border-radius: 100px;
   box-shadow: 0 2px 6px 0 rgba(47,83,151,0.10);
 }
 
-#logo {
-  width: 127px;
-  height: 100%;
-  border-radius: 0%;
-  background-color: white;
-  margin-right: 32px;
-  box-shadow: none;
-}
-
-#searchField {
-  width: 100%;
-  background: rgba(245,247,250,0.20);
-  border: 1px solid #F5F7FA;
-  border-radius: 6px;
-  padding: 8px 16px;
-}
-
-.Team ::placeholder {
-  color: #ffffff;
-  font-family: 'Lato', sans-serif;
-  font-style: italic;
-  font-weight: 300;
-}
 
 .Team h3 {
-  font-weight: 500;
+  font-weight: 1000;
   font-size: 18px;
   margin-bottom: 0;
   color: #00b69d;
@@ -79,7 +56,7 @@
 
 .Team h4 {
   transition: 500ms;
-  font-weight: 300;
+  font-weight: 500;
   font-size: 14px;
   margin-top: 8px;
   color: #00b69d;
